--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   bucket_name: "elasticbeanstalk-us-west-2-237361553263"
   bucket_path: "docket-react"
   on:
-    branch: ciao
+    branch: master
   access_key_id: "$AWS_ACCESS_KEY"
   secret_access_key:
     secure: "$AWS_SECRET_KEY"
